# wasm-serverless

./: .gitmodules  README copy.md
.VSCodeCounter/2024-02-23_00-11-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-04-21_00-21-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
cppWasmWorker/: CMakeLists.txt
cppWasmWorker/include/: utils.hpp
cppWasmWorker/worker/: CMakeLists.txt  main.cpp  native.hpp  worker.hpp
cppWasmWorker/worker_INTERP/: CMakeLists.txt  main.cpp  worker.hpp
cppWasmWorker/worker_JIT/: CMakeLists.txt  native.hpp  worker.hpp
cpp_example/: testWorker.cpp
cpp_example/worker/: CMakeLists.txt  main.cpp  worker  worker.hpp
experiment/: config.py
experiment/result/: coldstart(ms).csv  coldstart.csv  containerType.csv  data_transfer(ms).csv  data_transfer_new(ms).csv  groupingCost.csv  scaleupspeed.csv
experiment/wasm/: README.md
python/: function.py  functionManager.py  functionWorker.py  proxy.py  variables.py  wrongByte1.txt  wrongByte2.txt  wrongByte3.txt
python/config/: config.py  workerNodeInfo.yaml
python/dockerFunctions/base_c_proxy_c/: CMakeLists.txt  Dockerfile  image_setup.sh  proxy.cpp
python/dockerFunctions/base_c_proxy_c/include/: CMakeLists.txt
python/dockerFunctions/base_c_proxy_c/proxy/: main  proxy
python/function/: Worker.py  function.py  functionInfo.py  functionManager.py  functionWorker.py  portController.py  wasmProxy.py  workerProxy.py
python/grouping/: component.py  (+4 more)
(+257 files in other folders)
